<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.MainActivity">

    <Button
        android:id="@+id/connectButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_m"
        android:layout_marginTop="@dimen/spacing_m"
        android:text="@string/app_main_connect"
        app:layout_constraintEnd_toStartOf="@id/playground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playground"
        style="?attr/materialIconButtonFilledStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_m"
        android:layout_marginTop="@dimen/spacing_m"
        app:icon="@drawable/playground_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/connectButton"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/connectionProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_m"
        android:layout_marginTop="@dimen/spacing_s"
        app:indicatorSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/connectButton"
        tools:progress="69" />

    <TextView
        android:id="@+id/connectionStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_m"
        android:layout_marginTop="@dimen/spacing_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/connectionProgress"
        app:layout_constraintTop_toBottomOf="@id/connectButton"
        tools:text="things" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_m"
        android:layout_marginTop="@dimen/spacing_l"
        app:layout_constraintTop_toBottomOf="@id/connectionStatus" />

    <RelativeLayout
        android:id="@+id/batteryContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_m"
        android:layout_marginTop="@dimen/spacing_s"
        android:padding="@dimen/spacing_s"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:progress="100"
            app:indicatorColor="?attr/colorOutline"
            app:indicatorSize="48dp" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/batteryProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:indicatorColor="?attr/colorTertiary"
            app:indicatorSize="48dp"
            tools:progress="59" />

        <TextView
            android:id="@+id/batteryLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tools:text="0%" />
    </RelativeLayout>


    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/meetingToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_m"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="@id/batteryContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/batteryContainer"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/meetingOn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_main_meeting_on" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/meetingOff"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_main_meeting_off" />
    </com.google.android.material.button.MaterialButtonToggleGroup>


</androidx.constraintlayout.widget.ConstraintLayout>
